--- a/SPA_Client/app/Views/message.html
+++ b/SPA_Client/app/Views/message.html
@@ -1,2 +1,7 @@
-﻿<h1>message.html</h1>
-{{title}}
+﻿<h2>message.html</h2>
+<div ng-show="message" class="alert alert-success alert-dismissable">
+    {{message}}
+</div>
+<div ng-show="errors" class="alert alert-danger">
+    <strong>Error:</strong> {{errors[0]}}
+</div>
