basic tokens view

--- a/SPA_Client/app/Views/navbar.html
+++ b/SPA_Client/app/Views/navbar.html
@@ -30,7 +30,7 @@
         </a>
     </div>
     <ul class="nav navbar-nav">
-        <li ng-show="true"><a href="#/tokens" idm-prevent-default>Tokens</a></li>
+        <li><a href="#/tokens" idm-prevent-default>Tokens</a></li>
         <li ng-show="layout.showLogin"><a href="#/" ng-click="login()" idm-prevent-default>Login</a></li>
         <li ng-show="layout.showLogout"><a href="#/" ng-click="logout()" idm-prevent-default>Logout</a></li>
     </ul>
